--- a/ionic-mobile/elektron/www/templates/monitor.html
+++ b/ionic-mobile/elektron/www/templates/monitor.html
@@ -10,7 +10,7 @@
               </div>
         </div>
       </div>
-      <div class="card" ng-repeat="component in components_server">
+      <div class="card" ng-repeat="component in components_server" ng-show="{{ component.devicestate.name == 'on' && component.enabled==true}}">
           <div class="item item-divider">
             Componente: <b>{{component.label}}</b>
           </div>
