Statistics web y movil: grafico de barras

--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -47,7 +47,7 @@
                 <span class="badge badge-dark">{{components_server.length}}</span>
               </div>
               <div class="item">
-                <span>Consumo actual: </span>
+                <span>Consumo total: </span>
                 <span class="badge badge-positive"> {{ general_data.total_watts | number : 2 }} w </span>
               </div>
               <div class="item">
