--- a/ionic-mobile/elektron/www/templates/tasks.html
+++ b/ionic-mobile/elektron/www/templates/tasks.html
@@ -49,7 +49,7 @@
               <a ng-click="deleteTask(task.id,'datatasks')" class="task-float-right button button-small button-assertive">
                 <i class="icon ion-trash-b"></i>
               </a>
-              <a ui-sref="app.datatask({contactId: task.id})" class="task-float-right button button-small button-positive">
+              <a ng-click="editDataTask(task)" class="task-float-right button button-small button-positive">
                 <i class="icon ion-edit"></i>
               </a>
             </div>
@@ -90,7 +90,7 @@
               <a ng-click="deleteTask(task.id,'datetimetasks')" class="task-float-right button button-small button-assertive">
                 <i class="icon ion-trash-b"></i>
               </a>
-              <a class="task-float-right button button-small button-positive">
+              <a ng-click="editDateTimeTask(task)" class="task-float-right button button-small button-positive">
                 <i class="icon ion-edit"></i>
               </a>
 
